More weather translation update

--- a/branches/0.9.4/po/bg.po
+++ b/branches/0.9.4/po/bg.po
@@ -6878,18 +6878,20 @@ msgstr "%t | %c"
 #, fuzzy
 msgid ""
 "%l<br><br>\n"
+"<b>Current Weather:</b><br>\n"
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
 "Humidity: <b>%h</b><br>\n"
-"Precipitance: <b>%pp %</b><br>\n"
+"Chance of Precipitation: <b>%pp%</b><br>\n"
 "Pressure: <b>%p</b> (%q)<br>\n"
 "Wind: <b>%b</b> <b>%w %g</b><br>\n"
 "Visibility: <b>%v</b><br>\n"
 "Dew Point: <b>%d</b><br>\n"
 "Sunrise: %r<br>\n"
 "Sunset: %s<br>\n"
-"<img src=\"icon:moon%mi\"> %mp<br>\n"
 "UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
+"<b>Moonphase: </b>%mp<br>\n"
+"<img src=\"icon:moon%mi\"><br>\n"
 "<br>\n"
 "Updated: %u<br>\n"
 msgstr ""
@@ -6898,7 +6900,7 @@ msgstr ""
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Температура: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
 "Влажност: <b>%h</b><br>\n"
-"Количество валежи: <b>%pp %</b><br>\n"
+"Количество валежи: <b>%pp%</b><br>\n"
 "Налягане: <b>%p</b> (%q)<br>\n"
 "Вятър: <b>%b</b> <b>%w %g</b><br>\n"
 "Видимост: <b>%v</b><br>\n"
