--- a/branches/0.9.4/po/cs.po
+++ b/branches/0.9.4/po/cs.po
@@ -6918,18 +6918,20 @@ msgstr "%t | %c"
 #, fuzzy
 msgid ""
 "%l<br><br>\n"
+"<b>Current Weather:</b><br>\n"
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
 "Humidity: <b>%h</b><br>\n"
-"Precipitance: <b>%pp %</b><br>\n"
+"Chance of Precipitation: <b>%pp%</b><br>\n"
 "Pressure: <b>%p</b> (%q)<br>\n"
 "Wind: <b>%b</b> <b>%w %g</b><br>\n"
 "Visibility: <b>%v</b><br>\n"
 "Dew Point: <b>%d</b><br>\n"
 "Sunrise: %r<br>\n"
 "Sunset: %s<br>\n"
-"<img src=\"icon:moon%mi\"> %mp<br>\n"
 "UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
+"<b>Moonphase: </b>%mp<br>\n"
+"<img src=\"icon:moon%mi\"><br>\n"
 "<br>\n"
 "Updated: %u<br>\n"
 msgstr ""
@@ -6937,7 +6939,7 @@ msgstr ""
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Teplota: <b>%t</b> (vypadá jako: <b>%f</b>)<br>\n"
 "Vlhkost: <b>%h</b><br>\n"
-"Proměnlivost: <b>%pp %</b><br>\n"
+"Proměnlivost: <b>%pp%</b><br>\n"
 "Tlak: <b>%p</b> (%q)<br>\n"
 "Vítr: <b>%b</b> <b>%w %g</b><br>\n"
 "Viditelnost: <b>%v</b><br>\n"
