--- a/branches/0.9.4/po/uk.po
+++ b/branches/0.9.4/po/uk.po
@@ -6918,22 +6918,25 @@ msgstr "пориви"
 msgid "%t | %c"
 msgstr "%t | %c"
 
+
 #: plugins/weather/weather.cpp:566
 #, fuzzy
 msgid ""
 "%l<br><br>\n"
+"<b>Current Weather:</b><br>\n"
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
 "Humidity: <b>%h</b><br>\n"
-"Precipitance: <b>%pp %</b><br>\n"
+"Chance of Precipitation: <b>%pp%</b><br>\n"
 "Pressure: <b>%p</b> (%q)<br>\n"
 "Wind: <b>%b</b> <b>%w %g</b><br>\n"
 "Visibility: <b>%v</b><br>\n"
 "Dew Point: <b>%d</b><br>\n"
 "Sunrise: %r<br>\n"
 "Sunset: %s<br>\n"
-"<img src=\"icon:moon%mi\"> %mp<br>\n"
 "UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
+"<b>Moonphase: </b>%mp<br>\n"
+"<img src=\"icon:moon%mi\"><br>\n"
 "<br>\n"
 "Updated: %u<br>\n"
 msgstr ""
@@ -6943,7 +6946,7 @@ msgstr ""
 "Температура: <b>%t</b> <br>\n"
 "(відчувається: <b>%f</b>)<br>\n"
 "Вологість: <b>%h%</b><br>\n"
-"Стрімкість: <b>%pp %</b><br>\n"
+"Стрімкість: <b>%pp%</b><br>\n"
 "Тиск: <b>%p</b> (%q)<br>\n"
 "Вітер: <b>%b</b> <b>%w %g</b><br>\n"
 "Видимість: <b>%v</b><br>\n"
