Not translating the whole weather forecast template, only parts of it. Part I. Users might experience problems with weather forecast translation for a while...

--- a/trunk/po/ru.po
+++ b/trunk/po/ru.po
@@ -5763,12 +5763,36 @@ msgid ""
 msgstr "отсутствует"
 
 #: plugins/weather/weather.cpp:437
-msgid "km"
+msgid ""
+"_: weather\n"
+"km"
 msgstr "км"
 
+msgid ""
+"_: weather\n"
+"mi"
+msgstr "миль"
+
 #: plugins/weather/weather.cpp:438
-msgid "km/h"
+msgid ""
+"_: weather\n"
+"km/h"
 msgstr "км/ч"
+
+msgid ""
+"_: weather\n"
+"mph"
+msgstr "миль/час"
+
+msgid ""
+"_: weather\n"
+"mmHg"
+msgstr "мм.рт.ст."
+
+msgid ""
+"_: weather\n"
+"inHg"
+msgstr "дюйм.рт.ст"
 
 #: plugins/weather/weather.cpp:439
 msgid ""
@@ -5872,44 +5896,110 @@ msgstr "порывы "
 msgid "%t | %c"
 msgstr "%t | %c"
 
-#: plugins/weather/weather.cpp:566
 msgid ""
-"%l<br><br>\n"
-"<b>Current Weather:</b><br>\n"
-"<img src=\"icon:weather%i\"> %c<br>\n"
-"Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
-"Humidity: <b>%h</b><br>\n"
-"Chance of Precipitation: <b>%pp%</b><br>\n"
-"Pressure: <b>%p</b> (%q)<br>\n"
-"Wind: <b>%b</b> <b>%w %g</b><br>\n"
-"Visibility: <b>%v</b><br>\n"
-"Dew Point: <b>%d</b><br>\n"
-"Sunrise: %r<br>\n"
-"Sunset: %s<br>\n"
-"UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
-"<b>Moonphase: </b>%mp<br>\n"
-"<img src=\"icon:moon%mi\"><br>\n"
-"<br>\n"
-"Updated: %u<br>\n"
-msgstr ""
-"%l<br><br>\n"
-"<b>Текущая погода:</b><br>\n"
-"<img src=\"icon:weather%i\"> %c<br>\n"
-"Температура: <b>%t</b> (по ощущениям <b>%f</b>)<br>\n"
-"Влажность: <b>%h</b><br>\n"
-"Вероятность осадков: <b>%pp%</b><br>\n"
-"Давление: <b>%a мм.рт.ст.</b> (%q)<br>\n"
-"Ветер: <b>%b</b> <b>%x %y</b><br>\n"
-"Видимость: <b>%v</b><br>\n"
-"Точка росы: <b>%d</b><br>\n"
-"Восход: %r<br>\n"
-"Закат: %s<br>\n"
-"Интенсивность ультрафиолетового "
-"излучения <b>%ut</b>, равна <b>%ui</b> (из 11)<br>\n"
-"<b>Фаза Луны: </b>%mp<br>\n"
-"<img src=\"icon:moon%mi\"><br>\n"
-"<br>\n"
-"Обновлено: %u<br>\n"
+"_: weather\n"
+"Current Weather"
+msgstr "Текущая погода"
+
+msgid ""
+"_: weather\n"
+"Temperature"
+msgstr "Температура"
+
+msgid ""
+"_: weather\n"
+"feels like"
+msgstr "по ощущениям"
+
+msgid ""
+"_: weather\n"
+"Humidity"
+msgstr "Влажность"
+
+msgid ""
+"_: weather\n"
+"Chance of Precipitation"
+msgstr "Вероятность осадков"
+
+msgid ""
+"_: weather\n"
+"Pressure"
+msgstr "Давление"
+
+msgid ""
+"_: weather\n"
+"Visibility"
+msgstr "Видимость"
+
+msgid ""
+"_: weather\n"
+"Dew Point"
+msgstr "Точка росы"
+
+msgid ""
+"_: weather\n"
+"Sunrise"
+msgstr "Восход"
+
+msgid ""
+"_: weather\n"
+"Sunset"
+msgstr "Закат"
+
+msgid ""
+"_: weather\n"
+"UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)"
+msgstr "Интенсивность ультрафиолетового излучения <b>%ut</b>, равна <b>%ui</b> (из 11)"
+
+msgid ""
+"_: weather\n"
+"Moonphase"
+msgstr "Фаза Луны"
+
+msgid ""
+"_: weather\n"
+"Updated"
+msgstr "Обновлено"
+
+# #: plugins/weather/weather.cpp:566
+# Please do not erase it, I will need it later
+#~ msgid ""
+#~ "%l<br><br>\n"
+#~ "<b>Current Weather:</b><br>\n"
+#~ "<img src=\"icon:weather%i\"> %c<br>\n"
+#~ "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
+#~ "Humidity: <b>%h</b><br>\n"
+#~ "Chance of Precipitation: <b>%pp%</b><br>\n"
+#~ "Pressure: <b>%p</b> (%q)<br>\n"
+#~ "Wind: <b>%b</b> <b>%w %g</b><br>\n"
+#~ "Visibility: <b>%v</b><br>\n"
+#~ "Dew Point: <b>%d</b><br>\n"
+#~ "Sunrise: %r<br>\n"
+#~ "Sunset: %s<br>\n"
+#~ "UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
+#~ "<b>Moonphase: </b>%mp<br>\n"
+#~ "<img src=\"icon:moon%mi\"><br>\n"
+#~ "<br>\n"
+#~ "Updated: %u<br>\n"
+#~ msgstr ""
+#~ "%l<br><br>\n"
+#~ "<b>Текущая погода:</b><br>\n"
+#~ "<img src=\"icon:weather%i\"> %c<br>\n"
+#~ "Температура: <b>%t</b> (по ощущениям <b>%f</b>)<br>\n"
+#~ "Влажность: <b>%h</b><br>\n"
+#~ "Вероятность осадков: <b>%pp%</b><br>\n"
+#~ "Давление: <b>%a мм.рт.ст.</b> (%q)<br>\n"
+#~ "Ветер: <b>%b</b> <b>%x %y</b><br>\n"
+#~ "Видимость: <b>%v</b><br>\n"
+#~ "Точка росы: <b>%d</b><br>\n"
+#~ "Восход: %r<br>\n"
+#~ "Закат: %s<br>\n"
+#~ "Интенсивность ультрафиолетового "
+#~ "излучения <b>%ut</b>, равна <b>%ui</b> (из 11)<br>\n"
+#~ "<b>Фаза Луны: </b>%mp<br>\n"
+#~ "<img src=\"icon:moon%mi\"><br>\n"
+#~ "<br>\n"
+#~ "Обновлено: %u<br>\n"
 
 #: plugins/weather/weather.cpp:590
 msgid ""
