New weather forecast template: Swedish translation

--- a/trunk/po/sv.po
+++ b/trunk/po/sv.po
@@ -4742,6 +4742,12 @@ msgstr "Insticksmodul som visar väder"
 msgid "Not connected"
 msgstr "Inte ansluten"
 
+#: plugins/weather/weather.cpp:352
+msgid ""
+"_: weather\n"
+"Weather data provided by weather.com&reg;"
+msgstr ""
+
 #: plugins/weather/weather.cpp:367
 msgid "Monday"
 msgstr "Måndag"
@@ -5138,12 +5144,36 @@ msgid ""
 msgstr "Lugnt"
 
 #: plugins/weather/weather.cpp:437
-msgid "km"
+msgid  ""
+"_: weather\n"
+"km"
 msgstr "km"
 
+msgid ""
+"_: weather\n"
+"mi"
+msgstr ""
+
 #: plugins/weather/weather.cpp:438
-msgid "km/h"
+msgid  ""
+"_: weather\n"
+"km/h"
 msgstr "km/h"
+
+msgid ""
+"_: weather\n"
+"mph"
+msgstr ""
+
+msgid ""
+"_: weather\n"
+"mmHg"
+msgstr ""
+
+msgid ""
+"_: weather\n"
+"inHg"
+msgstr ""
 
 #: plugins/weather/weather.cpp:439
 msgid ""
@@ -5241,43 +5271,113 @@ msgstr "kast "
 msgid "%t | %c"
 msgstr "%t | %c"
 
-#: plugins/weather/weather.cpp:566
 msgid ""
-"%l<br><br>\n"
-"<b>Current Weather:</b><br>\n"
-"<img src=\"icon:weather%i\"> %c<br>\n"
-"Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
-"Humidity: <b>%h</b><br>\n"
-"Chance of Precipitation: <b>%pp%</b><br>\n"
-"Pressure: <b>%p</b> (%q)<br>\n"
-"Wind: <b>%b</b> <b>%w %g</b><br>\n"
-"Visibility: <b>%v</b><br>\n"
-"Dew Point: <b>%d</b><br>\n"
-"Sunrise: %r<br>\n"
-"Sunset: %s<br>\n"
-"UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
-"<b>Moonphase: </b>%mp<br>\n"
-"<img src=\"icon:moon%mi\"><br>\n"
-"<br>\n"
-"Updated: %u<br>\n"
-msgstr ""
-"%l<br><br>\n"
-"<b>Aktuellt väder:</b><br>\n"
-"<img src=\"icon:weather%i\"> %c<br>\n"
-"Temperatur: <b>%t</b> (känns som: <b>%f</b>)<br>\n"
-"Luftfuktighet: <b>%h</b><br>\n"
-"Nederbörd: <b>%pp %</b><br>\n"
-"Lufttryck: <b>%p</b> (%q)<br>\n"
-"Vind: <b>%b</b> <b>%w %g</b><br>\n"
-"Synbarhet: <b>%v</b><br>\n"
-"Daggpunkt: <b>%d</b><br>\n"
-"Soluppgång: %r<br>\n"
-"Solnedgång: %s<br>\n"
-"UV-intensitet är <b>%ut</b> med värdet <b>%ui</b> (av 11)<br>\n"
-"<b>Månfas: </b>%mp<br>\n"
-"<img src=\"icon:moon%mi\"><br>\n"
-"<br>\n"
-"Uppdaterad: %u<br>\n"
+"_: weather\n"
+"Current Weather"
+msgstr "Aktuellt väder"
+
+msgid ""
+"_: weather\n"
+"Temperature"
+msgstr "Temperatur"
+
+msgid ""
+"_: weather\n"
+"feels like"
+msgstr "känns som"
+
+msgid ""
+"_: weather\n"
+"Humidity"
+msgstr "Luftfuktighet"
+
+msgid ""
+"_: weather\n"
+"Chance of Precipitation"
+msgstr "Nederbörd"
+
+msgid ""
+"_: weather\n"
+"Pressure"
+msgstr "Lufttryck"
+
+# msgid ""
+# "_: weather\n"
+# "Wind"
+# msgstr "Vind"
+
+msgid ""
+"_: weather\n"
+"Visibility"
+msgstr "Synbarhet"
+
+msgid ""
+"_: weather\n"
+"Dew Point"
+msgstr "Daggpunkt"
+
+msgid ""
+"_: weather\n"
+"Sunrise"
+msgstr "Soluppgång"
+
+msgid ""
+"_: weather\n"
+"Sunset"
+msgstr "Solnedgång"
+
+msgid ""
+"_: weather\n"
+"UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)"
+msgstr "UV-intensitet är <b>%ut</b> med värdet <b>%ui</b> (av 11)"
+
+msgid ""
+"_: weather\n"
+"Moonphase"
+msgstr "Månfas"
+
+msgid ""
+"_: weather\n"
+"Updated"
+msgstr "Månfas"
+
+# #: plugins/weather/weather.cpp:566
+# msgid ""
+# "%l<br><br>\n"
+# "<b>Current Weather:</b><br>\n"
+# "<img src=\"icon:weather%i\"> %c<br>\n"
+# "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
+# "Humidity: <b>%h</b><br>\n"
+# "Chance of Precipitation: <b>%pp%</b><br>\n"
+# "Pressure: <b>%p</b> (%q)<br>\n"
+# "Wind: <b>%b</b> <b>%w %g</b><br>\n"
+# "Visibility: <b>%v</b><br>\n"
+# "Dew Point: <b>%d</b><br>\n"
+# "Sunrise: %r<br>\n"
+# "Sunset: %s<br>\n"
+# "UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
+# "<b>Moonphase: </b>%mp<br>\n"
+# "<img src=\"icon:moon%mi\"><br>\n"
+# "<br>\n"
+# "Updated: %u<br>\n"
+# msgstr ""
+# "%l<br><br>\n"
+# "<b>Aktuellt väder:</b><br>\n"
+# "<img src=\"icon:weather%i\"> %c<br>\n"
+# "Temperatur: <b>%t</b> (känns som: <b>%f</b>)<br>\n"
+# "Luftfuktighet: <b>%h</b><br>\n"
+# "Nederbörd: <b>%pp %</b><br>\n"
+# "Lufttryck: <b>%p</b> (%q)<br>\n"
+# "Vind: <b>%b</b> <b>%w %g</b><br>\n"
+# "Synbarhet: <b>%v</b><br>\n"
+# "Daggpunkt: <b>%d</b><br>\n"
+# "Soluppgång: %r<br>\n"
+# "Solnedgång: %s<br>\n"
+# "UV-intensitet är <b>%ut</b> med värdet <b>%ui</b> (av 11)<br>\n"
+# "<b>Månfas: </b>%mp<br>\n"
+# "<img src=\"icon:moon%mi\"><br>\n"
+# "<br>\n"
+# "Uppdaterad: %u<br>\n"
 
 #: plugins/weather/weather.cpp:590
 msgid ""
