And small Swedish update here...

--- a/branches/0.9.4/po/sv.po
+++ b/branches/0.9.4/po/sv.po
@@ -6898,7 +6898,7 @@ msgstr ""
 "<img src=\"icon:weather%i\"> %c<br>\n"
 "Temperatur: <b>%t</b> (känns som: <b>%f</b>)<br>\n"
 "Luftfuktighet: <b>%h</b><br>\n"
-"Nederbörd: <b>%pp%</b><br>\n"
+"Chans för nederbörd: <b>%pp%</b><br>\n"
 "Lufttryck: <b>%p</b> (%q)<br>\n"
 "Vind: <b>%b</b> <b>%w %g</b><br>\n"
 "Synlighet: <b>%v</b><br>\n"
