New weather forecast template: Bulgarian translation

--- a/trunk/po/bg.po
+++ b/trunk/po/bg.po
@@ -5179,50 +5179,116 @@ msgstr "м/с"
 
 #: plugins/weather/weather.cpp:508 plugins/weather/weather.cpp:509
 msgid "gust "
-msgstr "порив"
+msgstr "порив "
 
 #: plugins/weather/weather.cpp:558
 msgid "%t | %c"
 msgstr "%t | %c"
 
-#: plugins/weather/weather.cpp:566
 msgid ""
-"%l<br><br>\n"
-"<b>Current Weather:</b><br>\n"
-"<img src=\"icon:weather%i\"> %c<br>\n"
-"Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
-"Humidity: <b>%h</b><br>\n"
-"Chance of Precipitation: <b>%pp%</b><br>\n"
-"Pressure: <b>%p</b> (%q)<br>\n"
-"Wind: <b>%b</b> <b>%w %g</b><br>\n"
-"Visibility: <b>%v</b><br>\n"
-"Dew Point: <b>%d</b><br>\n"
-"Sunrise: %r<br>\n"
-"Sunset: %s<br>\n"
-"UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
-"<b>Moonphase: </b>%mp<br>\n"
-"<img src=\"icon:moon%mi\"><br>\n"
-"<br>\n"
-"Updated: %u<br>\n"
+"_: weather\n"
+"Current Weather"
+msgstr "Текущо време"
+
+msgid ""
+"_: weather\n"
+"Temperature"
+msgstr "Температура"
+
+msgid ""
+"_: weather\n"
+"feels like"
 msgstr ""
-"%l<br><br>\n"
-"<b>Текущо време:</b><br>\n"
-"<img src=\"icon:weather%i\"> %c<br>\n"
-"Температура: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
-"Влажност: <b>%h</b><br>\n"
-"Количество валежи: <b>%pp %</b><br>\n"
-"Налягане: <b>%p</b> (%q)<br>\n"
-"Вятър: <b>%b</b> <b>%w %g</b><br>\n"
-"Видимост: <b>%v</b><br>\n"
-"Точка на оросяване: <b>%d</b><br>\n"
-"Изгрев: %r<br>\n"
-"Залез: %s<br>\n"
-"UV-интензивност <b>%ut</b> със стойност <b>%ui</b> "
-"(от 11)<br>\n"
-"<b>Фаза на луната: </b>%mp<br>\n"
-"<img src=\"icon:moon%mi\"><br>\n"
-"<br>\n"
-"Обновено: %u<br>\n"
+
+msgid ""
+"_: weather\n"
+"Humidity"
+msgstr "Влажност"
+
+#, fuzzy
+msgid ""
+"_: weather\n"
+"Chance of Precipitation"
+msgstr "Количество валежи"
+
+msgid ""
+"_: weather\n"
+"Pressure"
+msgstr "Налягане"
+
+msgid ""
+"_: weather\n"
+"Visibility"
+msgstr "Видимост"
+
+msgid ""
+"_: weather\n"
+"Dew Point"
+msgstr "Точка на оросяване"
+
+msgid ""
+"_: weather\n"
+"Sunrise"
+msgstr "Изгрев"
+
+msgid ""
+"_: weather\n"
+"Sunset"
+msgstr "Залез"
+
+msgid ""
+"_: weather\n"
+"UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)"
+msgstr "UV-интензивност <b>%ut</b> със стойност <b>%ui</b> (от 11)"
+
+msgid ""
+"_: weather\n"
+"Moonphase"
+msgstr "Фаза на луната"
+
+msgid ""
+"_: weather\n"
+"Updated"
+msgstr "Обновено"
+
+#: plugins/weather/weather.cpp:566
+# msgid ""
+# "%l<br><br>\n"
+# "<b>Current Weather:</b><br>\n"
+# "<img src=\"icon:weather%i\"> %c<br>\n"
+# "Temperature: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
+# "Humidity: <b>%h</b><br>\n"
+# "Chance of Precipitation: <b>%pp%</b><br>\n"
+# "Pressure: <b>%p</b> (%q)<br>\n"
+# "Wind: <b>%b</b> <b>%w %g</b><br>\n"
+# "Visibility: <b>%v</b><br>\n"
+# "Dew Point: <b>%d</b><br>\n"
+# "Sunrise: %r<br>\n"
+# "Sunset: %s<br>\n"
+# "UV-Intensity is <b>%ut</b> with value <b>%ui</b> (of 11)<br>\n"
+# "<b>Moonphase: </b>%mp<br>\n"
+# "<img src=\"icon:moon%mi\"><br>\n"
+# "<br>\n"
+# "Updated: %u<br>\n"
+# msgstr ""
+# "%l<br><br>\n"
+# "<b>Текущо време:</b><br>\n"
+# "<img src=\"icon:weather%i\"> %c<br>\n"
+# "Температура: <b>%t</b> (feels like: <b>%f</b>)<br>\n"
+# "Влажност: <b>%h</b><br>\n"
+# "Количество валежи: <b>%pp %</b><br>\n"
+# "Налягане: <b>%p</b> (%q)<br>\n"
+# "Вятър: <b>%b</b> <b>%w %g</b><br>\n"
+# "Видимост: <b>%v</b><br>\n"
+# "Точка на оросяване: <b>%d</b><br>\n"
+# "Изгрев: %r<br>\n"
+# "Залез: %s<br>\n"
+# "UV-интензивност <b>%ut</b> със стойност <b>%ui</b> "
+# "(от 11)<br>\n"
+# "<b>Фаза на луната: </b>%mp<br>\n"
+# "<img src=\"icon:moon%mi\"><br>\n"
+# "<br>\n"
+# "Обновено: %u<br>\n"
 
 #: plugins/weather/weather.cpp:590
 msgid ""
